--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "load-testing-using-nodejs",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -12,5 +11,15 @@
     "axios": "^0.19.2",
     "child_process": "^1.0.2",
     "minimist": "^1.2.5"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tombaranowicz/LoadTestingUsingNodeJS.git"
+  },
+  "keywords": [],
+  "bugs": {
+    "url": "https://github.com/tombaranowicz/LoadTestingUsingNodeJS/issues"
+  },
+  "homepage": "https://github.com/tombaranowicz/LoadTestingUsingNodeJS#readme",
+  "description": ""
 }
